testing top and bottom resize positions for index.html, and also added .css file

--- a/index.html
+++ b/index.html
@@ -3,37 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+<link rel="stylesheet" href="./Resources/assets/styles.css">
 <link rel="shortcut icon" href="./Resources/favicon.ico">
 <title>Godly Gifts</title>
 <style>
 .bar-container {
     position: absolute;
-    top: 0px;
+    top: 18%;
     left: 0;
     width:400px;
     margin:0 auto 0 auto;
     float:  left;
     padding: 20px;
-    border: 2px solid lightblue;
+    border: 0px solid lightblue;
 }  
 .line-container {
     position: absolute;
-    bottom: 0px;
+    bottom: 18%;
     left: 0;
     width:400px;
     margin:0 auto 0 auto;
     float:  left;
     padding: 20px;
-    border: 2px solid lightblue;
+    border: 0px solid lightblue;
 }
 .map-container {
     position: absolute;
-    top: 150px;
+    top: 22%;
     right: 0;
     width: 60%;
     float:  right;
     padding: 30px;
-    border: 3px solid lightblue;
+    border: 0px solid lightblue;
 }  
 .group-names-container {
     position: absolute;
