--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <!-- Add all the containers -->	
 <div class="bar-container" id="bar-chart-container">Bar Chart will load here!</div>		
 <div class="line-container" id="line-chart-container">FusionCharts XT will load here!</div>     
-<center> <div class="map-container" id="map-container">FusionCharts XT will load here!</div> </center>   
+<div class="map-container" id="map-container">FusionCharts XT will load here!</div>   
 <script src="./Resources/assets/js.js"></script>
 
 </body>
