--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=yes">
 <link rel="stylesheet" href="./Resources/assets/styles.css">
 <link rel="shortcut icon" href="./Resources/favicon.ico">
 <title>Godly Gifts</title>
@@ -29,7 +29,7 @@
 }
 .map-container {
     position: absolute;
-    top: 22%;
+    top: 20%;
     right: 0;
     width: 60%;
     float:  right;
@@ -37,32 +37,49 @@
     border: 0px solid lightblue;
 }  
 .group-names-container {
-    position: absolute;
-    bottom: 0;
     width: 90%;
     float:  right;
-    padding: 30px;
+    padding: 10px;
     text-align: center;
+    font-size: 7px;
 }  
 </style>
 
-<center><h1>Godly Gifts</h1></center>
-
-<div class="group-names-container">
-    <center><h3>By Bilal Kaludi, David Ksor, Georgia Myers, Sofia Ysita</h3></center>
-  </div>
 
 <!-- Include fusioncharts core library -->
 <script type="text/javascript" src="https://cdn.fusioncharts.com/fusioncharts/latest/fusioncharts.js"></script>
 <!-- Include fusion theme -->
 <script type="text/javascript" src="https://cdn.fusioncharts.com/fusioncharts/latest/themes/fusioncharts.theme.fusion.js"></script>
 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+
 </head>
 <body>
-<!-- Add all the containers -->	
-<div class="bar-container" id="bar-chart-container">Bar Chart will load here!</div>		
-<div class="line-container" id="line-chart-container">FusionCharts XT will load here!</div>     
-<div class="map-container" id="map-container">FusionCharts XT will load here!</div>   
+    <div class="container">
+    <center><h1>Godly Gifts</h1></center>
+    </div>  
+    <div class="container">
+        <div class="row">  
+        <div class="col-sm-12" id="map-container">FusionCharts XT will load here!</div>
+        </div>  
+        <div class="row">    
+            <!-- Add all the containers --> 
+            <div class="col-md-6" id="bar-chart-container">Bar Chart will load here!</div>     
+                     
+            <div class="col-md-6" id="line-chart-container">FusionCharts XT will load here!</div> 
+        </div>  
+    </div>  
+    <div class="container">
+        <!-- <div class="row">  -->
+        <div class="group-names-container">
+            <center><h3>By Bilal Kaludi, David Ksor, Georgia Myers, Sofia Ysita</h3></center>
+        <!-- </div> -->
+        </div>
+    </div> 
+
+
+     
 <script src="./Resources/assets/js.js"></script>
 
 </body>
