added links to index htmls and made bottom 2 charts bigger

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
     </div>  
     <div class="container">
         <div class="row">  
-        <div class="col-sm-12" id="map-container">FusionCharts XT will load here!</div>
+        <div class="col-sm-12" id="map-container">Map will load here!</div>
         </div>  
         <div class="row">    
             <!-- Add all the containers --> 
             <div class="col-md-6" id="bar-chart-container">Bar Chart will load here!</div>     
                      
-            <div class="col-md-6" id="line-chart-container">FusionCharts XT will load here!</div> 
+            <div class="col-md-6" id="timeline-chart-container">Timeline Chart XT will load here!</div> 
         </div>  
     </div>  
     <div class="container">
