--- a/egypt_index.html
+++ b/egypt_index.html
@@ -7,15 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./Resources/assets/styles.css">
   <title>Godly Gifts</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 
-<body>
+<body class="egypt">
 
   <div class="container">
     <div class="row">
       <div class="text-center">
-        <h1>Godly Gifts</h1>
+        <h1><a href="index.html">Godly Gifts</a></h1>
         <p>A Glossary of Gods and Their Gifts</p>
       </div>
     </div>
@@ -29,8 +29,12 @@
 	<div class="col-md-5">
 	<div class="card">
   	<div class="card-body">
-    	<h3 id="god-name" class="card-title"></h3>
-    	<h4 id="god-mythology" class="card-subtitle mb-2 text-muted">Mythology</h4>
+    	<h2 id="god-name" class="card-title"></h2>
+    	<h5 id="god-mythology" class="card-subtitle mb-2 text-muted">Mythology</h5>
+      <h5 class="card-text"><u>Main Aspects:</u></h5>
+      <p id="aspects" class="card-text">aspects</p>
+      <p id="aspects2" class="card-text">aspects</p>
+      <h5 class="card-text"><u>Description:</u></h5>
     	<p id="asp-desc" class="card-text">God aspects/description.</p>
   	</div>
 	</div>
@@ -41,20 +45,9 @@
 		</div>
       </div>
     </div>
-    <div class="row">
-<figure class="figure">
-  <script
-  type="text/javascript"
-  src="https://ssl.gstatic.com/trends_nrtr/3197_RC01/embed_loader.js"
-></script>
-<script type="text/javascript">
-  trends.embed.renderExploreWidget("GEO_MAP", {"comparisonItem":[{"keyword":"Zeus","geo":"","time":"2004-01-01 2022-12-20"}],"category":0,"property":""}, {"exploreQuery":"date=all&q=Zeus","guestPath":"https://trends.google.com:443/trends/embed/"});
-</script>
-  <figcaption class="figure-caption">Google trend of interest by region since 2004</figcaption>
-</figure>
-    </div>
+   
 	<div class="group-names-container">
-    	<center><h6>By Bilal Kaludi, David Ksor, Georgia Myers, 	Sofia Ysita</h6></center>
+    	<center><h6>By Bilal Kaludi, Davit Ksor, Georgia Myers, 	Sofia Ysita</h6></center>
   	</div>
   </div>
 
