--- a/Mythology_Type/greek_index.html
+++ b/Mythology_Type/greek_index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./Resources/assets/styles.css">
+  <link rel="stylesheet" href="../Resources/assets/css/styles.css">
   <title>Godly Gifts</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="row">
       <div class="text-center">
-        <h1><a href="index.html">Godly Gifts</a></h1>
+        <h1><a href="../index.html">Godly Gifts</a></h1>
         <p>A Glossary of Gods and Their Gifts</p>
       </div>
     </div>
@@ -52,7 +52,7 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="greek_script.js"></script>
+  <script src="../Resources/assets/js/greek_script.js"></script>
   <!--script src="./static/js/bonus.js"></script>
   
 </body>
