--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=yes">
-<link rel="stylesheet" href="./Resources/assets/styles.css">
+<link rel="stylesheet" href="./Resources/assets/css/styles.css">
 <link rel="shortcut icon" href="./Resources/favicon.ico">
 <title>Godly Gifts</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
@@ -41,7 +41,7 @@
     	<center><h6>By Bilal Kaludi, Davit Ksor, Georgia Myers, 	Sofia Ysita</h6></center>
   	</div>
      
-<script src="./Resources/assets/js.js"></script>
+<script src="./Resources/assets/js/js.js"></script>
 
 </body>
 </html>
