adding color touchups

--- a/Mythology_Type/egypt_index.html
+++ b/Mythology_Type/egypt_index.html
@@ -46,7 +46,7 @@
       </div>
     </div>
    
-	<div class="group-names-container">
+	<div class="group-names-container-egypt">
     	<center><h6>By Bilal Kaludi, Davit Ksor, Georgia Myers, 	Sofia Ysita</h6></center>
   	</div>
   </div>
