--- a/Mythology_Type/norse_index.html
+++ b/Mythology_Type/norse_index.html
@@ -45,7 +45,7 @@
 		</div>
       </div>
     </div>
-	<div class="group-names-container">
+	<div class="group-names-container-norse">
     	<center><h6>By Bilal Kaludi, Davit Ksor, Georgia Myers, 	Sofia Ysita</h6></center>
   	</div>
   </div>
